changed the css properties

--- a/src/public/charts/problem3.html
+++ b/src/public/charts/problem3.html
@@ -6,6 +6,11 @@
         </script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <style>
+            *{
+                box-sizing: border-box;
+                margin: 0rem;
+                padding: 0rem;
+            }
             #container .highcharts-subtitle a {
                 text-decoration: underline;
             }
@@ -19,11 +24,10 @@
             }
 
             .navbar a {
-                float: left;
                 display: block;
                 color: white;
                 text-align: center;
-                padding: 14px 16px;
+                padding: 0.9rem 1rem;
                 text-decoration: none;
             }
 
