--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 align-items: center;
             }
             li {
-                margin: 10px;
-                padding: 10px;
+                margin: 0.6rem;
+                padding: 0.6rem;
                 background-color: #bfbabe;
                 border-radius: 5px;
                 width: 100%;
-                min-width: 200px;
-                max-width: 400px;
+                min-width: 12.5rem;
+                max-width: 25rem;
                 cursor: pointer;
                 transition: all 0.3s ease;
             }
@@ -34,7 +34,7 @@
                 color: #2f2f2f;
                 text-decoration: none;
                 font-weight: bold;
-                font-size: 18px;
+                font-size: 1.1rem;
                 text-align: center;
                 display: block;
             }
