--- a/src/public/charts/problem1.html
+++ b/src/public/charts/problem1.html
@@ -7,6 +7,11 @@
         </script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <style>
+            *{
+                box-sizing: border-box;
+                margin: 0rem;
+                padding: 0rem;
+            }
             #container .highcharts-subtitle a {
                 text-decoration: underline;
             }
@@ -19,7 +24,6 @@
             }
 
             .navbar a {
-                float: left;
                 display: block;
                 color: white;
                 text-align: center;
