--- a/src/public/charts/problem1.html
+++ b/src/public/charts/problem1.html
@@ -27,7 +27,7 @@
                 display: block;
                 color: white;
                 text-align: center;
-                padding: 14px 16px;
+                padding: 0.9rem 1rem;
                 text-decoration: none;
             }
 
