--- a/src/public/charts/problem7.html
+++ b/src/public/charts/problem7.html
@@ -87,7 +87,7 @@
 
                     const chartOptions = {
                         chart: {
-                            type: 'column'
+                            type: 'line'
                         },
                         title: {
                             text: 'Strike Rate Of Different Player Over Year'
